<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".quiz"
        android:orientation="vertical">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/budget1"
                        style="@style/options"
                        android:text="@string/budget1"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/budget2"
                        style="@style/options"
                        android:text="@string/budget2"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/budget3"
                        style="@style/options"
                        android:text="@string/budget3"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/budget4"
                        style="@style/options"
                        android:text="@string/budget4"/>
                </RadioGroup>


            </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/options"
                        android:id="@+id/distance1"
                        android:text="@string/distance1"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/options"
                        android:id="@+id/distance2"
                        android:text="@string/distance2"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/distance3"
                        style="@style/options"
                        android:text="@string/distance3"/>

                </RadioGroup>


            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howLong"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/options"
                    android:id="@+id/howLong1"
                    android:text="@string/howLong1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/howLong2"
                    style="@style/options"
                    android:text="@string/howLong2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/howLong3"
                    style="@style/options"
                    android:text="@string/howLong3"/>

            </RadioGroup>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partners"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/partners1"
                    style="@style/options"
                    android:text="@string/partners1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/options"
                    android:id="@+id/partners2"
                    android:text="@string/partners2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/partners3"
                    style="@style/options"
                    android:text="@string/partners3"/>

            </RadioGroup>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Climate"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Climate1"
                    style="@style/options"
                    android:text="@string/Climate1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/options"
                    android:id="@+id/Climate2"
                    android:text="@string/Climate2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Climate3"
                    style="@style/options"
                    android:text="@string/Climate3"/>

            </RadioGroup>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TypeOfHoliday"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/options"
                    android:id="@+id/TypeOfHoliday1"
                    android:text="@string/TypeOfHoliday1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/options"
                    android:id="@+id/TypeOfHoliday2"
                    android:text="@string/TypeOfHoliday2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TypeOfHoliday3"
                    style="@style/options"
                    android:text="@string/TypeOfHoliday3"/>

            </RadioGroup>


        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click Here"
            android:id="@+id/display"
            android:layout_marginBottom="22dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" />





    </LinearLayout>
</ScrollView>